package designpatterns.questions.costexplorer.model;

public interface PricingModel {
    Double calculateMonthlyCost();
    Double calculateYearlyCost();
}
